--- a/webapp/package.json
+++ b/webapp/package.json
@@ -35,6 +35,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.23.9",
     "accessible-autocomplete": "^2.0.3",
+    "add": "^2.0.6",
     "autoprefixer": "^10.0.0",
     "axios": "^0.30.0",
     "babel-loader": "^8.1.0",
@@ -53,10 +54,6 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-debug": "^1.1.1",
-    "express-rate-limit": "^8.0.1",
-    "express-session": "^1.18.2",
-    "express-session-redis": "^0.2.0",
-    "express-validator": "^6.9.2",
     "fast-csv": "^4.3.6",
     "file-loader": "^6.1.0",
     "glightbox": "^3.0.7",
@@ -78,13 +75,15 @@
     "postcss-preset-env": "^7.0.0",
     "precss": "^4.0.0",
     "prettier": "^2.2.1",
+    "rate-limiter-flexible": "^7.2.0",
     "redis": "^3.0.2",
     "sass": "^1.89.2",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.2.1",
     "uuid": "^8.3.2",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@stryker-mutator/core": "^8.7.1",
