--- a/webapp/package.json
+++ b/webapp/package.json
@@ -92,6 +92,7 @@
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "css-minimizer-webpack-plugin": "^7.0.2",
+    "cypress": "^15.0.0",
     "jest": "^29.7.0",
     "nodemon": "^2.0.7",
     "redis-mock": "^0.56.3",
