--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,8 +13,11 @@
     "local": "cross-env NODE_ENV=production concurrently \"nodemon -r esm start.js\" \"npm run watch\"",
     "prod": "cross-env NODE_ENV=production concurrently \"node -r esm start.js\"",
     "test": "jest --detectOpenHandles",
-    "test:coverage": "jest --coverage --detectOpenHandles"
-  },
+    "test:coverage": "jest --coverage --detectOpenHandles",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
+    },
+
   "repository": {
     "type": "git",
     "url": "https://github.com/mcagov/droits.git"
@@ -93,7 +96,7 @@
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "css-minimizer-webpack-plugin": "^7.0.2",
-    "cypress": "^15.0.0",
+    "cypress": "^14.0.0",
     "jest": "^29.7.0",
     "nodemon": "^2.0.7",
     "redis-mock": "^0.56.3",
