--- a/webapp/package.json
+++ b/webapp/package.json
@@ -68,6 +68,7 @@
     "mini-css-extract-plugin": "^0.11.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "next-auth": "^4.24.13",
     "nunjucks": "^3.2.2",
     "passport": "^0.5.3",
     "passport-azure-ad": "^4.3.5",
