--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "devDependencies": {
     "husky": "^9.1.7",
     "jest": "^30.2.0",
-    "lint-staged": "^15.4.3"
+    "lint-staged": "^15.4.3",
+    "node-mocks-http": "^1.17.2"
   },
   "scripts": {
     "prepare": "husky",
